--- a/src/components/search-box/search-box.styles.scss
+++ b/src/components/search-box/search-box.styles.scss
@@ -8,8 +8,12 @@
   border: none;
   padding: 0 1rem;
   border-radius: 5px;
+  font-size: 1.6rem;
 
   @media only screen and (max-width: $bp-medium) {
     width: 90%;
   }
+}
+.search-box:focus {
+  font-size: 16px;
 }
