--- a/src/components/sectionWithReview/sectionWithReview.styles.scss
+++ b/src/components/sectionWithReview/sectionWithReview.styles.scss
@@ -15,9 +15,13 @@
   align-items: center;
   justify-content: flex-end;
 
+  @media only screen and (max-width: $bp-medium) {
+    margin: 5rem 0;
+  }
   @media only screen and (max-width: $bp-small) {
     height: 30rem;
     padding: 5rem 0;
+    margin: 10rem 0;
     justify-content: center;
   }
 }
