--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -5,8 +5,9 @@
   height: 600px;
   padding: 0 2rem;
   position: relative;
+  z-index: 1;
 
-  margin-bottom: 15rem;
+  margin-bottom: -10rem;
 
   display: flex;
   flex-direction: column;
@@ -19,5 +20,8 @@
 
   @media only screen and (max-width: $bp-medium) {
     height: 480px;
+  }
+  @media only screen and (max-width: $bp-small) {
+    margin-bottom: -5rem;
   }
 }
