--- a/src/routes/trips/trips.styles.scss
+++ b/src/routes/trips/trips.styles.scss
@@ -1,10 +1,9 @@
 @import '../../styles/styles';
 
-.homepage {
+.trips-page {
+  height: auto;
   width: 100%;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
 }
