--- a/src/components/cart-list/cart-list.styles.scss
+++ b/src/components/cart-list/cart-list.styles.scss
@@ -13,4 +13,7 @@
   @media only screen and (max-width: $bp-large) {
     gap: 4rem;
   }
+  @media only screen and (max-width: $bp-small) {
+    margin-bottom: 0;
+  }
 }
