--- a/src/components/navigation/navigation-container/navigation-container.styles.scss
+++ b/src/components/navigation/navigation-container/navigation-container.styles.scss
@@ -11,6 +11,7 @@
   box-shadow: $shadow-normal;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
@@ -20,6 +21,6 @@
     justify-content: space-evenly;
   }
   @media only screen and (max-width: $bp-small) {
-    height: 10rem;
+    height: 15rem;
   }
 }
