--- a/src/components/navigation/navigation-message/navigation-message.styles.scss
+++ b/src/components/navigation/navigation-message/navigation-message.styles.scss
@@ -8,4 +8,8 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+
+  @media only screen and (max-width: $bp-small) {
+    align-items: center;
+  }
 }
