--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,4 +32,8 @@ code {
 a {
   text-decoration: none;
   font-size: 2rem;
+
+  @media only screen and (max-width: $bp-small) {
+    font-size: 1.7rem;
+  }
 }
