--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -23,7 +23,14 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
 
 // Texts sizes and colors
 .header-big {
-  font-size: 4rem;
+  font-size: 8rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 6rem;
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 4rem;
+  }
 }
 .header-normal {
   font-size: 2.5rem;
@@ -34,6 +41,10 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
   font-size: 2rem;
   letter-spacing: 1.5px;
   color: $color-secondary;
+
+  @media only screen and (max-width: $bp-small) {
+    font-size: 1.6rem;
+  }
 }
 
 .paragraph-normal {
