--- a/src/components/navigation/navigation-bar/navigation-bar.styles.scss
+++ b/src/components/navigation/navigation-bar/navigation-bar.styles.scss
@@ -14,6 +14,8 @@
   }
   @media only screen and (max-width: $bp-small) {
     justify-content: center;
+    height: 10rem;
+    padding: 0 2rem;
   }
 
   &--logo {
@@ -46,5 +48,32 @@
       margin: 0 2rem;
       text-transform: uppercase;
     }
+  }
+
+  &--link {
+    @media only screen and (max-width: $bp-small) {
+      display: none;
+    }
+  }
+}
+
+.logo__container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 4rem;
+  width: auto;
+}
+
+.menu__btn {
+  height: 3rem;
+  width: 3rem;
+
+  display: none;
+
+  @media only screen and (max-width: $bp-small) {
+    display: block;
   }
 }
