--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -17,6 +17,7 @@ $color-secondary: #00bbf9;
 
 // Texts colors
 $color-light: white;
+$color-black: black;
 
 // Shadows
 $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
@@ -59,6 +60,9 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
 
 .text-white {
   color: $color-light;
+}
+.text-black {
+  color: $color-black;
 }
 
 // 03.08.2022 UNUSED
