--- a/src/components/navigation/navigation-bar/navigation-bar.styles.scss
+++ b/src/components/navigation/navigation-bar/navigation-bar.styles.scss
@@ -2,9 +2,8 @@
 
 .navigation__bar {
   width: 100%;
-  height: 5rem;
+  height: 10rem;
   padding: 0 2rem;
-  position: relative; //temp
 
   display: flex;
   align-items: center;
@@ -50,12 +49,6 @@
       text-transform: uppercase;
     }
   }
-
-  &--link {
-    @media only screen and (max-width: $bp-small) {
-      display: none;
-    }
-  }
 }
 
 .logo__container {
@@ -68,13 +61,8 @@
   width: auto;
 }
 
-.menu__btn {
+.icon {
   height: 3rem;
-  width: 3rem;
-
-  display: none;
-
-  @media only screen and (max-width: $bp-small) {
-    display: block;
-  }
+  width: auto;
+  margin-left: 3rem;
 }
