--- a/src/components/navigation/navigation-message/navigation-message.styles.scss
+++ b/src/components/navigation/navigation-message/navigation-message.styles.scss
@@ -3,11 +3,12 @@
 .navigation__message {
   height: 100%;
   width: 100%;
+  padding-top: 5rem;
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
 
   @media only screen and (max-width: $bp-small) {
     align-items: center;
