--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -2,11 +2,8 @@
 
 .navigation {
   width: 100%;
-  height: 600px;
-
-  position: relative;
-  z-index: 1;
-
+  height: 60rem;
+  padding: 0 5rem;
   margin-bottom: -10rem;
 
   display: flex;
@@ -22,7 +19,7 @@
     height: 48rem;
   }
   @media only screen and (max-width: $bp-small) {
-    margin-bottom: 2rem;
-    height: 30rem;
+    height: 40rem;
+    padding: 0;
   }
 }
