--- a/src/components/navigation/navigation-bar/navigation-bar.styles.scss
+++ b/src/components/navigation/navigation-bar/navigation-bar.styles.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 10rem;
   padding: 0 2rem;
+  position: relative;
 
   display: flex;
   align-items: center;
@@ -56,13 +57,8 @@
   align-items: center;
 }
 
-.logo {
-  height: 4rem;
-  width: auto;
-}
-
 .icon {
-  height: 3rem;
+  height: 2rem;
   width: auto;
   margin-left: 3rem;
 }
