--- a/src/routes/user/user.styles.scss
+++ b/src/routes/user/user.styles.scss
@@ -1,1 +1,14 @@
 @import '../../styles/styles';
+
+.user-page {
+  width: 100vw;
+  height: 100vh;
+  padding: 5rem;
+
+  background-color: antiquewhite; //temp
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5rem;
+}
