--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,13 +1,17 @@
 @import '../../styles/styles';
 
 .signin {
-  height: 18rem;
+  height: 20rem;
   width: 100%;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    height: 15rem;
+  }
 }
 
 .signin input {
@@ -15,4 +19,6 @@
   padding: 0 1rem;
   margin-bottom: 1rem;
   height: 2.5rem;
+  border: none;
+  border-bottom: 1px solid black;
 }
