--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -14,11 +14,6 @@
   }
 }
 
-.signin input {
-  font-size: 1.6rem;
-  padding: 0 1rem;
-  margin-bottom: 1rem;
-  height: 2.5rem;
-  border: none;
-  border-bottom: 1px solid black;
+.signin form {
+  display: grid;
 }
