--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -13,17 +13,18 @@ $main-color: black;
   margin: 0;
 
   .form-input {
+    height: 2rem;
     background: none;
     background-color: white;
     color: $sub-color;
     font-size: 1.6rem;
     padding: 0;
     display: block;
-    width: 100%;
+    width: 20rem;
     border: none;
     border-radius: 0;
     border-bottom: 1px solid $sub-color;
-    margin: 25px 0;
+    margin: 2.5rem 0;
 
     &:focus {
       outline: none;
@@ -40,7 +41,7 @@ $main-color: black;
 
   .form-input-label {
     color: $sub-color;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: normal;
     position: absolute;
     pointer-events: none;
