--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -10,10 +10,13 @@
   align-items: center;
 
   @media only screen and (max-width: $bp-small) {
-    height: 15rem;
+    height: 20rem;
   }
-}
 
-.signin form {
-  display: grid;
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
