--- a/src/routes/register/register.styles.scss
+++ b/src/routes/register/register.styles.scss
@@ -14,7 +14,7 @@
   }
 
   &__container {
-    height: 50rem;
+    height: 60rem;
     width: 70rem;
     border-radius: 5px;
     box-shadow: $shadow-normal;
@@ -31,6 +31,8 @@
     }
 
     form {
+      width: 100%;
+
       display: flex;
       flex-direction: column;
       align-items: center;
