--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -10,13 +10,33 @@
   align-items: center;
 
   @media only screen and (max-width: $bp-small) {
-    height: 20rem;
+    height: 25rem;
   }
+}
 
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.signin-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign-in-error-message {
+  height: 15rem;
+  width: 100%;
+  padding: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  &--user {
+    height: 5rem;
+    width: auto;
   }
+}
+
+.hidden {
+  display: none;
 }
