--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -2,18 +2,74 @@
 
 .footer {
   width: 100%;
-  height: 50rem;
+  height: auto;
+  padding: 5rem 0;
+  background-color: $color-secondary;
 
-  background-image: url(../../assets/wallpaper-trip-3.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-  @media only screen and (max-width: $bp-medium) {
-    height: 40rem;
+  // @media only screen and (max-width: $bp-medium) {
+  //   height: 40rem;
+  // }
+  // @media only screen and (max-width: $bp-small) {
+  //   height: 20rem;
+  //   margin-top: 5rem;
+  // }
+
+  &__box {
+    height: auto;
+    width: 100%;
+    padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  @media only screen and (max-width: $bp-small) {
-    height: 20rem;
-    margin-top: 5rem;
+
+  &__contact {
+    height: auto;
+    width: 100%;
+    margin: 2rem 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+    }
+
+    &--item {
+      height: 5rem;
+      width: 15rem;
+      box-shadow: $shadow-normal;
+      background-color: white;
+      border-radius: 5px;
+
+      @media only screen and (max-width: $bp-small) {
+        width: 90%;
+      }
+    }
   }
+}
+
+.contact--link {
+  height: 100%;
+  width: 100%;
+  color: $color-black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.contact--icon {
+  height: 2rem;
+  width: auto;
 }
