--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -48,6 +48,10 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
   }
 }
 
+.paragraph-big {
+  font-size: 2rem;
+  letter-spacing: 1.5px;
+}
 .paragraph-normal {
   font-size: 1.6rem;
   letter-spacing: 1.3px;
