--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -11,13 +11,9 @@
   justify-content: center;
   align-items: center;
 
-  // @media only screen and (max-width: $bp-medium) {
-  //   height: 40rem;
-  // }
-  // @media only screen and (max-width: $bp-small) {
-  //   height: 20rem;
-  //   margin-top: 5rem;
-  // }
+  @media only screen and (max-width: $bp-small) {
+    margin-top: 5rem;
+  }
 
   &__box {
     height: auto;
