--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -1,1 +1,34 @@
 @import '../../styles/styles';
+
+.checkout-page {
+  width: 100vw;
+  height: auto;
+  padding: 5rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 0;
+  }
+
+  &__container {
+    height: auto;
+    width: 70rem;
+    border-radius: 5px;
+    box-shadow: $shadow-normal;
+    background-color: $color-light;
+    padding: 5rem 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      padding: 5rem 0;
+    }
+  }
+}
