checkout page and cart.context

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -72,3 +72,10 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
 .align-center {
   text-align: center;
 }
+
+.mb-large {
+  margin-bottom: 5rem;
+}
+.mt-large {
+  margin-top: 5rem;
+}
