--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -6,6 +6,7 @@
   padding: 5rem;
 
   display: flex;
+
   justify-content: center;
   align-items: flex-start;
 
@@ -14,7 +15,7 @@
   }
 
   &__container {
-    height: auto;
+    min-height: 30rem;
     width: 70rem;
     border-radius: 5px;
     box-shadow: $shadow-normal;
