--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -6,11 +6,12 @@
   border-radius: 5px;
   box-shadow: $shadow-normal;
   border: none;
-  background-color: $color-secondary;
+  background-color: $color-orange;
   margin: 0 1rem;
   letter-spacing: 1.6px;
   cursor: pointer;
   font-size: 1.6rem;
+  font-weight: bolder;
   text-transform: uppercase;
   transition: all 0.2s ease-out;
 }
