--- a/src/components/navigation/navigation-container/navigation-container.styles.scss
+++ b/src/components/navigation/navigation-container/navigation-container.styles.scss
@@ -14,6 +14,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
 
   @media only screen and (max-width: $bp-medium) {
     min-width: 95%;
@@ -21,6 +22,6 @@
     justify-content: space-evenly;
   }
   @media only screen and (max-width: $bp-small) {
-    height: 15rem;
+    height: auto;
   }
 }
