--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -13,7 +13,7 @@
   }
   @media only screen and (max-width: $bp-small) {
     width: 95%;
-    height: 22rem;
+    // height: 22rem;
   }
 
   &__img {
@@ -49,7 +49,7 @@
     @media only screen and (max-width: $bp-small) {
       align-self: flex-end;
       width: 20rem;
-      height: 20rem;
+      height: 23rem;
       margin-top: -13rem;
     }
   }
