--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -36,6 +36,11 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
     font-size: 4rem;
   }
 }
+.header-large {
+  font-size: 3.5rem;
+  letter-spacing: 1.5px;
+  color: $color-black;
+}
 .header-normal {
   font-size: 2.5rem;
   letter-spacing: 1.5px;
@@ -88,9 +93,21 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
   text-align: center;
 }
 
+.mt-large {
+  margin-top: 5rem;
+}
+.mt-medim {
+  margin-top: 2.5rem;
+}
+
 .mb-large {
   margin-bottom: 5rem;
 }
-.mt-large {
-  margin-top: 5rem;
+
+.mb-medium {
+  margin-bottom: 2.5rem;
+}
+
+.align-right {
+  align-self: flex-end;
 }
