fixing colors and for input for register page

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -14,7 +14,8 @@ $bp-smallest: 31.25em; // 500px
 // Colors
 $color-primary: #edf2f4;
 $color-secondary: #00bbf9;
-$color-orange: #ff9f1c;
+// $color-orange: #ff9f1c;
+$color-orange: #118ab2;
 
 // Texts colors
 $color-light: white;
