--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -13,13 +13,13 @@ $bp-smallest: 31.25em; // 500px
 
 // Colors
 $color-primary: #edf2f4;
-$color-secondary: #00bbf9;
-// $color-orange: #ff9f1c;
-$color-orange: #118ab2;
+$color-secondary: #118ab2;
+$color-tertiary: #00bbf9;
+$color-green: #2a9d8f;
+$color-red: #e5383b;
 
 // Texts colors
 $color-light: white;
-
 $color-black: #3e5c76;
 $color-gray-dark: #14213d;
 
