--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -6,14 +6,23 @@
   border-radius: 5px;
   box-shadow: $shadow-normal;
   border: none;
-  background-color: $color-orange;
   margin: 0 1rem;
   letter-spacing: 1.6px;
   cursor: pointer;
   font-size: 1.6rem;
   font-weight: bolder;
   text-transform: uppercase;
-  transition: all 0.2s ease-out;
+  transition: all 0.3s ease-out;
+}
+.button__normal {
+  background-color: $color-secondary;
+  color: $color-light;
+  font-size: 1.4rem;
+}
+.button__delete {
+  background-color: $color-red;
+  color: $color-light;
+  font-size: 1.4rem;
 }
 
 .button:active {
