--- a/src/components/address/address.styles.scss
+++ b/src/components/address/address.styles.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 50rem;
 
-  background-image: url(../../assets/world-map.svg);
+  background-image: url(../../assets/wallpapers/world-map.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
