--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -13,7 +13,8 @@ $bp-smallest: 31.25em; // 500px
 
 // Colors
 $color-primary: #edf2f4;
-$color-secondary: #118ab2;
+// $color-secondary: #118ab2;
+$color-secondary: #264653;
 $color-tertiary: #00bbf9;
 $color-green: #2a9d8f;
 $color-red: #e5383b;
