--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -14,7 +14,7 @@ $bp-smallest: 31.25em; // 500px
 // Colors
 $color-primary: #edf2f4;
 // $color-secondary: #118ab2;
-$color-secondary: #264653;
+$color-secondary: #22577a;
 $color-tertiary: #00bbf9;
 $color-green: #2a9d8f;
 $color-red: #e5383b;
