--- a/src/components/welcome/welcome.styles.scss
+++ b/src/components/welcome/welcome.styles.scss
@@ -21,8 +21,8 @@
   }
 
   &__pictures {
-    width: 50%;
-    height: 100%;
+    width: 400px;
+    height: 266px;
     position: relative;
 
     display: flex;
