update checkout page for iphone 8 plus munir changes

--- a/src/components/offerts/offerts.styles.scss
+++ b/src/components/offerts/offerts.styles.scss
@@ -24,6 +24,7 @@
 
     @media only screen and (max-width: $bp-medium) {
       height: 40rem;
+      gap: 2rem;
     }
     @media only screen and (max-width: $bp-small) {
       flex-direction: column;
