--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -15,7 +15,7 @@
   }
 
   &__container {
-    min-height: 30rem;
+    min-height: 40rem;
     width: 70rem;
     border-radius: 5px;
     box-shadow: $shadow-normal;
@@ -30,6 +30,35 @@
     @media only screen and (max-width: $bp-small) {
       width: 100%;
       padding: 5rem 0;
+    }
+  }
+
+  &__message {
+    height: auto;
+    width: 100%;
+    padding: 0 10rem;
+    margin-bottom: 5rem;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 3rem;
+    }
+  }
+
+  &__picture {
+    height: 20rem;
+    width: 35rem;
+    align-self: center;
+    margin-bottom: 5rem;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &--success {
+      background-image: url(../../assets/wallpapers/success-status.jpg);
+    }
+    &--emptybag {
+      background-image: url(../../assets/wallpapers/empty-bag.jpg);
     }
   }
 }
