--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -48,6 +48,11 @@ $shadow-normal: 0 1rem 4rem rgba(black, 0.2);
   letter-spacing: 1.5px;
   color: $color-black;
 }
+.header-success {
+  font-size: 2.5rem;
+  letter-spacing: 1.5px;
+  color: $color-green;
+}
 .header-small {
   font-size: 2rem;
   letter-spacing: 1.5px;
