--- a/src/routes/gallery/gallery.styles.scss
+++ b/src/routes/gallery/gallery.styles.scss
@@ -1,7 +1,66 @@
 @import '../../styles/styles';
 
 .gallery-page {
-  height: 100%;
-  width: 100%;
-  margin-top: 10rem;
+  width: 100vw;
+  height: auto;
+  padding: 5rem;
+
+  display: flex;
+
+  justify-content: center;
+  align-items: flex-start;
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 0;
+  }
+
+  &__container {
+    min-height: 40rem;
+    width: 70rem;
+    border-radius: 5px;
+    box-shadow: $shadow-normal;
+    background-color: $color-light;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  &__picture {
+    height: 40rem;
+    width: 100%;
+  }
+
+  &__img {
+    height: 100%;
+    width: 100%;
+  }
+
+  &__actions {
+    height: auto;
+    width: 100%;
+    margin: 2rem 0;
+    padding: 0 5rem;
+  }
+
+  &__cta {
+    height: 9rem;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__text {
+    height: auto;
+    padding: 5rem 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
