--- a/src/components/navigation/navigation-message/navigation-message.styles.scss
+++ b/src/components/navigation/navigation-message/navigation-message.styles.scss
@@ -3,7 +3,7 @@
 .navigation__message {
   height: 100%;
   width: 100%;
-  padding-top: 5rem;
+  padding-top: 1rem;
 
   display: flex;
   flex-direction: column;
@@ -11,6 +11,6 @@
   justify-content: flex-start;
 
   @media only screen and (max-width: $bp-small) {
-    align-items: center;
+    padding: 0 2rem;
   }
 }
