--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -12,7 +12,7 @@
 
   background-image: url(../../assets/wallpapers/trip-3.jpg);
   background-size: cover;
-  background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
 
   @media only screen and (max-width: $bp-medium) {
