adding gallery page, few updates

--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -3,10 +3,9 @@
 .checkout-page {
   width: 100vw;
   height: auto;
-  padding: 5rem;
+  margin-top: -10rem;
 
   display: flex;
-
   justify-content: center;
   align-items: flex-start;
 
