--- a/src/routes/gallery/gallery.styles.scss
+++ b/src/routes/gallery/gallery.styles.scss
@@ -12,6 +12,7 @@
 
   @media only screen and (max-width: $bp-small) {
     padding: 0;
+    margin-top: -20rem;
   }
 
   &__container {
@@ -21,6 +22,7 @@
     box-shadow: $shadow-normal;
     background-color: $color-light;
     padding: 0;
+    margin-top: -10rem;
 
     display: flex;
     flex-direction: column;
@@ -43,6 +45,10 @@
     width: 100%;
     margin: 2rem 0;
     padding: 0 5rem;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1rem;
+    }
   }
 
   &__cta {
