chenging images format to webp for better performace

--- a/src/components/sectionWithReview/sectionWithReview.styles.scss
+++ b/src/components/sectionWithReview/sectionWithReview.styles.scss
@@ -6,7 +6,7 @@
   margin: 10rem 0;
   padding: 10rem;
 
-  background-image: url(../../assets/wallpapers/trip-2.jpg);
+  background-image: url(../../assets/wallpapers/trip-2.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
