--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -59,10 +59,10 @@
     background-repeat: no-repeat;
 
     &--success {
-      background-image: url(../../assets/wallpapers/success-man.jpg);
+      background-image: url(../../assets/wallpapers/success-man.webp);
     }
     &--emptybag {
-      background-image: url(../../assets/wallpapers/empty-bag.jpg);
+      background-image: url(../../assets/wallpapers/empty-bag.webp);
     }
   }
 }
