--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-between;
 
-  background-image: url(../../assets/wallpapers/trip-1.jpg);
+  background-image: url(../../assets/wallpapers/trip-1.webp);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
