--- a/src/components/welcome/welcome.styles.scss
+++ b/src/components/welcome/welcome.styles.scss
@@ -39,8 +39,10 @@
   }
 
   &__picture {
-    height: 70%;
-    width: auto;
+    // height: 70%;
+    // width: auto;
+    height: 18.6rem;
+    width: 27.9rem;
     border-radius: 5px;
     position: absolute;
 
